# sol

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
.github/workflows/: build_and_test_solc.yml
design/: empty.sol  spec.md
examples/: args.sol  func.sol  hello.sol
examples/first_iteration/: first_iteration_program.sol  procs.sol
src/: Sol.g4  driver.cpp  example.sol  test.cpp
src/ast/: Ast.cpp  Ast.hpp  AstBuilder.cpp  AstBuilder.hpp  AstPrinter.cpp  AstPrinter.hpp  AstVisitor.hpp
src/ir/: IRGenerator.cpp  IRGenerator.hpp  IrGenerator.cpp  IrGenerator.hpp
src/parser/: Sol.g4  Sol.interp  SolBaseListener.cpp  SolBaseListener.h  SolBaseVisitor.cpp  SolBaseVisitor.h  SolLexer.cpp  SolLexer.h  SolLexer.interp  SolLexer.tokens  SolListener.cpp  SolListener.h  SolParser.cpp  SolParser.h  SolVisitor.cpp  SolVisitor.h
